// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typescript definition generation generates grpc message definition 1`] = `
"/**
 *       ***************************************
 *          AUTOGENERATED FILE - DO NOT EDIT
 *       ***************************************
 *
 * This file was generated by grpc-tools-node-protoc-promise-ts
 * https://github.com/rhinodavid/grpc-tools-node-protoc-promise-ts
 *
 * package: test
 * file: test.proto
 * generated at: Mon Sep 21 2020 03:15:20 GMT-0600 (Mountain Daylight Time)
 */

/* tslint:disable */
/* eslint-disable */

import * as jspb from \\"google-protobuf\\";
export class MessageA extends jspb.Message {
  getInt(): number;
  setInt(value: number): MessageA;

  serializeBinary(): Uint8Array;
  toObject(includeInstance?: boolean): MessageA.AsObject;
  static toObject(includeInstance: boolean, msg: MessageA): MessageA.AsObject;
  static extensions: { [key: number]: jspb.ExtensionFieldInfo<jspb.Message> };
  static extensionsBinary: {
    [key: number]: jspb.ExtensionFieldBinaryInfo<jspb.Message>;
  };
  static serializeBinaryToWriter(
    message: MessageA,
    writer: jspb.BinaryWriter
  ): void;
  static deserializeBinary(bytes: Uint8Array): MessageA;
  static deserializeBinaryFromReader(
    message: MessageA,
    reader: jspb.BinaryReader
  ): MessageA;
}

export namespace MessageA {
  export type AsObject = {
    pb_int: number;
  };
}

export class MessageB extends jspb.Message {
  getInt(): number;
  setInt(value: number): MessageB;

  serializeBinary(): Uint8Array;
  toObject(includeInstance?: boolean): MessageB.AsObject;
  static toObject(includeInstance: boolean, msg: MessageB): MessageB.AsObject;
  static extensions: { [key: number]: jspb.ExtensionFieldInfo<jspb.Message> };
  static extensionsBinary: {
    [key: number]: jspb.ExtensionFieldBinaryInfo<jspb.Message>;
  };
  static serializeBinaryToWriter(
    message: MessageB,
    writer: jspb.BinaryWriter
  ): void;
  static deserializeBinary(bytes: Uint8Array): MessageB;
  static deserializeBinaryFromReader(
    message: MessageB,
    reader: jspb.BinaryReader
  ): MessageB;
}

export namespace MessageB {
  export type AsObject = {
    pb_int: number;
  };
}
"
`;

exports[`Typescript definition generation generates grpc service definition with promises 1`] = `
"/**
 *       ***************************************
 *          AUTOGENERATED FILE - DO NOT EDIT
 *       ***************************************
 *
 * This file was generated by grpc-tools-node-protoc-promise-ts
 * https://github.com/rhinodavid/grpc-tools-node-protoc-promise-ts
 *
 * package: test
 * file: test.proto
 * generated at: Mon Sep 21 2020 03:15:20 GMT-0600 (Mountain Daylight Time)
 */

/* tslint:disable */
/* eslint-disable */

import * as grpc from \\"grpc\\";
import * as test_pb from \\"./test_pb\\";
import {
  TClientStreamingRpc,
  TServerStreamingRpc,
  TBidirectionalStreamingRpc,
  TUnaryRpc,
} from \\"grpc-promise-ts\\";

interface ITestService
  extends grpc.ServiceDefinition<grpc.UntypedServiceImplementation> {
  unary: ITestService_Iunary;
  clientStreaming: ITestService_IclientStreaming;
  serverStreaming: ITestService_IserverStreaming;
  bidirectionalStreaming: ITestService_IbidirectionalStreaming;
}

interface ITestService_Iunary
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/unary\\"
  requestStream: boolean; // false
  responseStream: boolean; // false
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_IclientStreaming
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/clientStreaming\\"
  requestStream: boolean; // true
  responseStream: boolean; // false
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_IserverStreaming
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/serverStreaming\\"
  requestStream: boolean; // false
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_IbidirectionalStreaming
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/bidirectionalStreaming\\"
  requestStream: boolean; // true
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}

export const TestService: ITestService;

export interface ITestServer {
  unary: grpc.handleUnaryCall<test_pb.MessageA, test_pb.MessageB>;
  clientStreaming: grpc.handleClientStreamingCall<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  serverStreaming: grpc.handleServerStreamingCall<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  bidirectionalStreaming: grpc.handleBidiStreamingCall<
    test_pb.MessageA,
    test_pb.MessageB
  >;
}

export interface ITestClient {
  unary(
    request: test_pb.MessageA,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  unary(
    request: test_pb.MessageA,
    metadata: grpc.Metadata,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  unary(
    request: test_pb.MessageA,
    metadata: grpc.Metadata,
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  clientStreaming(
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  clientStreaming(
    metadata: grpc.Metadata,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  clientStreaming(
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  clientStreaming(
    metadata: grpc.Metadata,
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  serverStreaming(
    request: test_pb.MessageA,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientReadableStream<test_pb.MessageB>;
  serverStreaming(
    request: test_pb.MessageA,
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientReadableStream<test_pb.MessageB>;
  bidirectionalStreaming(): grpc.ClientDuplexStream<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  bidirectionalStreaming(
    options: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  bidirectionalStreaming(
    metadata: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
}

export class TestClient extends grpc.Client implements ITestClient {
  constructor(
    address: string,
    credentials: grpc.ChannelCredentials,
    options?: object
  );
  public unary(
    request: test_pb.MessageA,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  public unary(
    request: test_pb.MessageA,
    metadata: grpc.Metadata,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  public unary(
    request: test_pb.MessageA,
    metadata: grpc.Metadata,
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  public clientStreaming(
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  public clientStreaming(
    metadata: grpc.Metadata,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  public clientStreaming(
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  public clientStreaming(
    metadata: grpc.Metadata,
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  public serverStreaming(
    request: test_pb.MessageA,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientReadableStream<test_pb.MessageB>;
  public serverStreaming(
    request: test_pb.MessageA,
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientReadableStream<test_pb.MessageB>;
  public bidirectionalStreaming(
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public bidirectionalStreaming(
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
}

/**
 * Interface and class to declare a Test client that has been promisifyed with the
 * \`grpc-promise-ts\` (https://github.com/rhinodavid/grpc-promise-ts) package
 */
export interface ITestPromiseClient {
  public unary: TUnaryRpc<test_pb.MessageA, test_pb.MessageB>;
  public clientStreaming: TClientStreamingRpc<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  public serverStreaming: TServerStreamingRpc<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  public bidirectionalStreaming: TDBidirectionalStreamingRpc<
    test_pb.MessageA,
    test_pb.MessageB
  >;
}
export class TestPromiseClient extends grpc.Client
  implements ITestPromiseClient {
  // This class cannot be directly instantiated.
  // To get an instance of TestPromiseClient, first create
  // a TestClient and then pass it to the \`convertToPromiseClient\`
  // function in the \`gprc-promise-ts\` package
  public unary: TUnaryRpc<test_pb.MessageA, test_pb.MessageB>;
  public clientStreaming: TClientStreamingRpc<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  public serverStreaming: TServerStreamingRpc<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  public bidirectionalStreaming: TDBidirectionalStreamingRpc<
    test_pb.MessageA,
    test_pb.MessageB
  >;
}
"
`;

exports[`Typescript definition generation generates grpc service definition without promises 1`] = `
"/**
 *       ***************************************
 *          AUTOGENERATED FILE - DO NOT EDIT
 *       ***************************************
 *
 * This file was generated by grpc-tools-node-protoc-promise-ts
 * https://github.com/rhinodavid/grpc-tools-node-protoc-promise-ts
 *
 * package: test
 * file: test.proto
 * generated at: Mon Sep 21 2020 03:15:20 GMT-0600 (Mountain Daylight Time)
 */

/* tslint:disable */
/* eslint-disable */

import * as grpc from \\"grpc\\";
import * as test_pb from \\"./test_pb\\";

interface ITestService
  extends grpc.ServiceDefinition<grpc.UntypedServiceImplementation> {
  unary: ITestService_Iunary;
  clientStreaming: ITestService_IclientStreaming;
  serverStreaming: ITestService_IserverStreaming;
  bidirectionalStreaming: ITestService_IbidirectionalStreaming;
}

interface ITestService_Iunary
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/unary\\"
  requestStream: boolean; // false
  responseStream: boolean; // false
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_IclientStreaming
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/clientStreaming\\"
  requestStream: boolean; // true
  responseStream: boolean; // false
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_IserverStreaming
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/serverStreaming\\"
  requestStream: boolean; // false
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_IbidirectionalStreaming
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/bidirectionalStreaming\\"
  requestStream: boolean; // true
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}

export const TestService: ITestService;

export interface ITestServer {
  unary: grpc.handleUnaryCall<test_pb.MessageA, test_pb.MessageB>;
  clientStreaming: grpc.handleClientStreamingCall<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  serverStreaming: grpc.handleServerStreamingCall<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  bidirectionalStreaming: grpc.handleBidiStreamingCall<
    test_pb.MessageA,
    test_pb.MessageB
  >;
}

export interface ITestClient {
  unary(
    request: test_pb.MessageA,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  unary(
    request: test_pb.MessageA,
    metadata: grpc.Metadata,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  unary(
    request: test_pb.MessageA,
    metadata: grpc.Metadata,
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  clientStreaming(
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  clientStreaming(
    metadata: grpc.Metadata,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  clientStreaming(
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  clientStreaming(
    metadata: grpc.Metadata,
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  serverStreaming(
    request: test_pb.MessageA,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientReadableStream<test_pb.MessageB>;
  serverStreaming(
    request: test_pb.MessageA,
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientReadableStream<test_pb.MessageB>;
  bidirectionalStreaming(): grpc.ClientDuplexStream<
    test_pb.MessageA,
    test_pb.MessageB
  >;
  bidirectionalStreaming(
    options: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  bidirectionalStreaming(
    metadata: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
}

export class TestClient extends grpc.Client implements ITestClient {
  constructor(
    address: string,
    credentials: grpc.ChannelCredentials,
    options?: object
  );
  public unary(
    request: test_pb.MessageA,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  public unary(
    request: test_pb.MessageA,
    metadata: grpc.Metadata,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  public unary(
    request: test_pb.MessageA,
    metadata: grpc.Metadata,
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientUnaryCall;
  public clientStreaming(
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  public clientStreaming(
    metadata: grpc.Metadata,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  public clientStreaming(
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  public clientStreaming(
    metadata: grpc.Metadata,
    options: Partial<grpc.CallOptions>,
    callback: (
      error: grpc.ServiceError | null,
      response: test_pb.MessageB
    ) => void
  ): grpc.ClientWritableStream<test_pb.MessageA>;
  public serverStreaming(
    request: test_pb.MessageA,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientReadableStream<test_pb.MessageB>;
  public serverStreaming(
    request: test_pb.MessageA,
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientReadableStream<test_pb.MessageB>;
  public bidirectionalStreaming(
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public bidirectionalStreaming(
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
}
"
`;
